...
                                    .foregroundColor(Color.white)
                                    .frame(maxWidth: .infinity)
                                    .frame(height: geometry.size.height * 0.1)
                                    .background(Color("azul"))
                                    .cornerRadius(20)
                                    .padding(.horizontal, geometry.size.width * 0.1)
                                    .accessibilityLabel("Verificador")
                            }
                        }
                        .offset(y:-88)
                        
                        Spacer() // Espaço para centralizar os botões
                    }
...
